# vulkan_guide

./: CMakeLists.txt  README.md  build.bat
include/: stb_image.h
shaders/: gradient.comp  shader.frag  shader.vert
src/: buffer.cpp  buffer.h  commandBuffer.cpp  debugMessenger.cpp  depthBuffer.cpp  depthBuffer.h  descriptors.cpp  descriptors.h  engine.h  geometry.cpp  geometry.h  graphicsPipeline.cpp  graphicsPipeline.h  image.cpp  image.h  imageViews.cpp  images.h  initializers.h  logicalDevice.cpp  logicalDevice.h  main.cpp  physicalDevice.cpp  physicalDevice.h  pipelines.h  queueFamilies.cpp  renderPass.cpp  renderer.cpp  renderer.h  shaderModule.cpp  shaderModule.h  structs.h  surface.cpp  surface.h  swapChain.cpp  swapChain.h  swapChainSupportDetails.cpp  texture.cpp  texture.h  uniformBufferObject.cpp  uniformBufferObject.h  (+9 more)
src/Renderer/: commandBuffer.h  debugMessenger.h  depthBuffer.h  descriptors.h  graphicsPipeline.h  image.h  physicalDevice.h  queueFamilies.h  renderPass.h  renderer.h  shaderModule.h  swapChainSupportDetails.h  sync.h  texture.h  utils.h  vulkanRenderer.h
